@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -34,11 +33,13 @@ import org.jabref.gui.filelist.LinkedFileEditDialogView;
 import org.jabref.gui.icon.IconTheme;
 import org.jabref.gui.icon.JabRefIcon;
 import org.jabref.gui.util.BackgroundTask;
+import org.jabref.gui.util.ControlHelper;
 import org.jabref.gui.util.TaskExecutor;
 import org.jabref.logic.externalfiles.LinkedFileHandler;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.net.URLDownload;
 import org.jabref.logic.util.io.FileNameUniqueness;
+import org.jabref.logic.util.io.FileUtil;
 import org.jabref.logic.xmp.XmpPreferences;
 import org.jabref.logic.xmp.XmpUtilWriter;
 import org.jabref.model.database.BibDatabaseContext;
@@ -101,7 +102,7 @@ public class LinkedFileViewModel extends AbstractViewModel {
                     if (linkedFile.isOnlineLink()) {
                         return true;
                     } else {
-                        Optional<Path> path = FileHelper.expandFilename(databaseContext, link, filePreferences);
+                        Optional<Path> path = FileHelper.find(databaseContext, link, filePreferences);
                         return path.isPresent() && Files.exists(path.get());
                     }
                 },
@@ -151,6 +152,18 @@ public class LinkedFileViewModel extends AbstractViewModel {
         }
     }
 
+    public String getTruncatedDescriptionAndLink() {
+        if (StringUtil.isBlank(linkedFile.getDescription())) {
+            return ControlHelper.truncateString(linkedFile.getLink(), -1, "...",
+                    ControlHelper.EllipsisPosition.CENTER);
+        } else {
+            return ControlHelper.truncateString(linkedFile.getDescription(), -1, "...",
+                    ControlHelper.EllipsisPosition.CENTER) + " (" +
+                    ControlHelper.truncateString(linkedFile.getLink(), -1, "...",
+                    ControlHelper.EllipsisPosition.CENTER) + ")";
+        }
+    }
+
     public Optional<Path> findIn(List<Path> directories) {
         return linkedFile.findIn(directories);
     }
@@ -192,7 +205,7 @@ public class LinkedFileViewModel extends AbstractViewModel {
     public void openFolder() {
         try {
             if (!linkedFile.isOnlineLink()) {
-                Optional<Path> resolvedPath = FileHelper.expandFilename(
+                Optional<Path> resolvedPath = FileHelper.find(
                         databaseContext,
                         linkedFile.getLink(),
                         filePreferences);
@@ -216,7 +229,7 @@ public class LinkedFileViewModel extends AbstractViewModel {
 
     public void askForNameAndRename() {
         String oldFile = this.linkedFile.getLink();
-        Path oldFilePath = Paths.get(oldFile);
+        Path oldFilePath = Path.of(oldFile);
         Optional<String> askedFileName = dialogService.showInputDialogWithDefaultAndWait(Localization.lang("Rename file"), Localization.lang("New Filename"), oldFilePath.getFileName().toString());
         askedFileName.ifPresent(this::renameFileToName);
     }
@@ -293,7 +306,7 @@ public class LinkedFileViewModel extends AbstractViewModel {
      * @return true if the suggested filename is same as current filename.
      */
     public boolean isGeneratedNameSameAsOriginal() {
-        Path file = Paths.get(this.linkedFile.getLink());
+        Path file = Path.of(this.linkedFile.getLink());
         String currentFileName = file.getFileName().toString();
         String suggestedFileName = this.linkedFileHandler.getSuggestedFileName();
 
@@ -414,10 +427,13 @@ public class LinkedFileViewModel extends AbstractViewModel {
             BackgroundTask<Path> downloadTask = prepareDownloadTask(targetDirectory.get(), urlDownload);
             downloadTask.onSuccess(destination -> {
                 LinkedFile newLinkedFile = LinkedFilesEditorViewModel.fromFile(destination, databaseContext.getFileDirectoriesAsPaths(filePreferences), externalFileTypes);
-                linkedFile.setLink(newLinkedFile.getLink());
-                linkedFile.setFileType(newLinkedFile.getFileType());
+                entry.addFile(0, newLinkedFile);
             });
             downloadProgress.bind(downloadTask.workDonePercentageProperty());
+            downloadTask.titleProperty().set(Localization.lang("Downloading"));
+            downloadTask.messageProperty().set(
+                    Localization.lang("Fulltext for") + ": " + entry.getCiteKeyOptional().orElse(Localization.lang("New entry")));
+            downloadTask.showToUser(true);
             taskExecutor.execute(downloadTask);
         } catch (MalformedURLException exception) {
             dialogService.showErrorDialogAndWait(Localization.lang("Invalid URL"), exception);
@@ -432,8 +448,9 @@ public class LinkedFileViewModel extends AbstractViewModel {
                     String suggestedTypeName = externalFileType.getName();
                     linkedFile.setFileType(suggestedTypeName);
                     String suggestedName = linkedFileHandler.getSuggestedFileName(externalFileType.getExtension());
-                    suggestedName = FileNameUniqueness.getNonOverWritingFileName(targetDirectory, suggestedName);
-                    return targetDirectory.resolve(suggestedName);
+                    String fulltextDir = FileUtil.createDirNameFromPattern(databaseContext.getDatabase(), entry, filePreferences.getFileDirPattern());
+                    suggestedName = FileNameUniqueness.getNonOverWritingFileName(targetDirectory.resolve(fulltextDir), suggestedName);
+                    return targetDirectory.resolve(fulltextDir).resolve(suggestedName);
                 })
                 .then(destination -> new FileDownloadTask(urlDownload.getSource(), destination))
                 .onFailure(exception -> dialogService.showErrorDialogAndWait("Download failed", exception));
@@ -470,5 +487,7 @@ public class LinkedFileViewModel extends AbstractViewModel {
         return linkedFile;
     }
 
-    public ValidationStatus fileExistsValidationStatus() { return fileExistsValidator.getValidationStatus(); }
+    public ValidationStatus fileExistsValidationStatus() {
+        return fileExistsValidator.getValidationStatus();
+    }
 }
